--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/estado-de-cuenta/edo-cuenta-component/edo-cuenta-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/estado-de-cuenta/edo-cuenta-component/edo-cuenta-component.component.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div style="text-align: center;" class="col-sm-2">
-                    <label class="control-label">$ {{subTotalAlojamiento}}
+                    <label class="control-label">$ {{subTotalAlojamiento.toLocaleString()}}
                     </label>
                 </div>
             </div>
@@ -450,7 +450,6 @@
     </div>
 </div>
 <br>
-    <div style="background-color: #00506a; text-align: center;" class="h4 modal-content">
       <div class="container">
         <div style=" padding-top: 1%;" class="row">
             <div class="col-lg-6">
@@ -476,5 +475,4 @@
             </div>
           </div>
         </div>
-      </div>
      
