--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -138,7 +138,7 @@
   </mat-tab>
 
   <mat-tab label="Edo de Cuenta">
-    <app-edo-cuenta-component></app-edo-cuenta-component>>
+    <app-edo-cuenta-component></app-edo-cuenta-component>
   </mat-tab>
 </mat-tab-group>
 
