--- a/src/app/pages/reportes/clientes/components/ver-folio/components/huesped/huesped.component.html
+++ b/src/app/pages/reportes/clientes/components/ver-folio/components/huesped/huesped.component.html
@@ -243,7 +243,7 @@
         autocomplete="off"
       />
     </div>
-  <div class="col-lg-6">
+  <!-- <div class="col-lg-6">
     <label class="form-label">USO DE CFDI</label>
     <mat-form-field appearance="fill">
       <mat-label></mat-label>
@@ -251,7 +251,7 @@
         <mat-option *ngFor="let cfdi of cfdiList" [value]="cfdi">{{cfdi}}</mat-option>
       </mat-select>
     </mat-form-field>
-  </div>
+  </div> -->
   </div>
  
 <br>
@@ -268,7 +268,7 @@
 <br>
   <div class="row">
     <div style="text-align: center;" class="col-md-12">
-      <textarea  style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
+      <textarea disabled style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
     </div>
   </div>
   <br>
