--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/estado-de-cuenta/edo-cuenta-component/edo-cuenta-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/estado-de-cuenta/edo-cuenta-component/edo-cuenta-component.component.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div style="text-align: center;" class="col-sm-2">
-                    <label class="control-label">$ {{subTotalAlojamiento.toLocaleString()}}
+                    <label class="control-label">$ {{subTotalAlojamiento}}
                     </label>
                 </div>
             </div>
